# Manually converted from that .vcproj file .
# This is just a try according to the docs.
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = RamseyX
RamseyX_SOURCES = constants.h CPUInfo.h CPULimiter.h dhry.h Graph.h LoginDlg.h MyCurlWrapper.h RamseyX.h RamseyXDlg.h RamseyXTask.h Resource.h Set.h SignupDlg.h Splash.h stdafx.h targetver.h dhry_1.c dhry_2.c Graph.cpp LoginDlg.cpp MyCurlWrapper.cpp RamseyX.cpp RamseyXDlg.cpp RamseyXTask.cpp Set.cpp SignupDlg.cpp Splash.cpp stdafx.cpp  
# Hey, is *.h *.cpp and *.c possible here? Listing those files out really sucks....
# I don't know how to include the resources here.....
# Well I have to do my winter holiday homework so I don't have time to carefully read the docs...(Yes, that's a stupid excuse)

dist_noinst_SCRIPTS = autogen.sh
