# Just a TEST for cross-platform configure / autoconf / automake
# It seems that MFC APIs should be rewritten in Qt?
AC_INIT([RamseyX], [VersionHere], [BugReportEmailHere],
             [TarBallName], [http://www.ramseyx.org/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
